--- a/notes/class/分布式计算/课件.md
+++ b/notes/class/分布式计算/课件.md
@@ -1155,7 +1155,7 @@ public:
 }//注意没有改写接口类的IBoat和IPlane的GetMaxSpeed.  只改写了中间类的两个函数
 ```
 COM对象的内存结构如下:
-![COM对象的内存结构](../../../imgs/分布式计算课件-六-2-2-1.png)
+![COM对象的内存结构](imgs/课件/六-2-2-1.png)
 
 * IBoat->GetMaxSpeed(*pV)将在内部调用GetMaxBoatSpeed,返回50
 * IPlane->GetMaxSpeed(*pV)将在内部调用GetMaxPlaneSpeed,返回800
@@ -1260,7 +1260,7 @@ ULONG BoatPlane::XBoat::Release()
 //对于XPlane也采用类似的方法.  
 ```
 ### 3.4基于复合技术的COM对象的内存结构
-![基于复合技术的COM对象的内存结构](../../../imgs/分布式计算课件-六-3-4-1.png)
+![基于复合技术的COM对象的内存结构](imgs/课件/六-3-4-1.png)
 
 ## 4.针对接口的引用计数
 ### 4.1需求
